contents stripped out

--- a/viridian/algae/typhoon/port.ipynb
+++ b/viridian/algae/typhoon/port.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TYPHOON protocol showcase"
+    "# PORT protocol showcase (for comparison)"
    ]
   },
   {
@@ -31,12 +31,13 @@
    "source": [
     "from os import environ\n",
     "\n",
-    "environ[\"PORT_MIN_TIMEOUT\"] = str(1)\n",
-    "environ[\"PORT_MAX_TIMEOUT\"] = str(4)\n",
-    "environ[\"PORT_DEFAULT_TIMEOUT\"] = str(3)\n",
-    "environ[\"PORT_MIN_NEXT_IN\"] = str(8.0)\n",
-    "environ[\"PORT_MAX_NEXT_IN\"] = str(32.0)\n",
-    "environ[\"PORT_MAX_RETRIES\"] = str(3)"
+    "environ[\"PROTOCOL_NAME\"] = \"port\"\n",
+    "environ[\"PROTOCOL_MIN_TIMEOUT\"] = environ[\"PORT_MIN_TIMEOUT\"] = str(1)\n",
+    "environ[\"PROTOCOL_MAX_TIMEOUT\"] = environ[\"PORT_MAX_TIMEOUT\"] = str(4)\n",
+    "environ[\"PROTOCOL_DEFAULT_TIMEOUT\"] = environ[\"PORT_DEFAULT_TIMEOUT\"] = str(3)\n",
+    "environ[\"PROTOCOL_MIN_NEXT_IN\"] = environ[\"PORT_MIN_NEXT_IN\"] = str(8.0)\n",
+    "environ[\"PROTOCOL_MAX_NEXT_IN\"] = environ[\"PORT_MAX_NEXT_IN\"] = str(32.0)\n",
+    "environ[\"PROTOCOL_MAX_RETRIES\"] = environ[\"PORT_MAX_RETRIES\"] = str(3)"
    ]
   },
   {
@@ -112,6 +113,15 @@
     "from typhoon.utils import toggle_network_permissions\n",
     "\n",
     "toggle_network_permissions(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> NB! In every cell below, only `PORT` packets are considered.\n",
+    "> Other `TCP` service packets are also captured, but not decoded.\n",
+    "> As a result, all non-`PORT` packets **will be marked as `INVALID`**."
    ]
   },
   {
@@ -216,17 +226,17 @@
     "from asyncio import sleep\n",
     "from os import environ\n",
     "\n",
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
-    "SLEEP_DELAY = (float(environ[\"TYPHOON_MAX_NEXT_IN\"]) + float(environ[\"TYPHOON_MAX_TIMEOUT\"])) * 5\n",
-    "TIMEOUT_DELAY = float(environ[\"TYPHOON_MAX_NEXT_IN\"]) * (float(environ[\"TYPHOON_MAX_RETRIES\"]) + 1)\n",
+    "SLEEP_DELAY = (float(environ[\"PORT_MAX_NEXT_IN\"]) + float(environ[\"PORT_MAX_TIMEOUT\"])) * 5\n",
+    "TIMEOUT_DELAY = float(environ[\"PORT_MAX_NEXT_IN\"]) * (float(environ[\"PORT_MAX_RETRIES\"]) + 1)\n",
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=lambda _: None) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=lambda _: None, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False, log_level=10) as c:\n",
     "            print(f\"Connection established! Sleeping for {SLEEP_DELAY}...\")\n",
     "            await sleep(SLEEP_DELAY)\n",
     "        print(f\"Connection interrupted! Waiting for {TIMEOUT_DELAY}...\")\n",
@@ -255,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
@@ -263,8 +273,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(expand_time=False)) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -288,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
@@ -296,8 +306,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -316,7 +326,7 @@
    "source": [
     "from asyncio import sleep\n",
     "\n",
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
@@ -324,8 +334,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 100ms 75ms\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 4)"
    ]
@@ -345,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
@@ -353,8 +363,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"loss 30%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -371,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
@@ -379,8 +389,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"duplicate 30%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -399,7 +409,7 @@
    "source": [
     "from asyncio import sleep\n",
     "\n",
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
@@ -407,8 +417,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 125ms reorder 30% 50%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 2.5)"
    ]
@@ -426,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
+    "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
     "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
@@ -434,8 +444,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"corrupt 30%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
     "            await CONFIG.process(c)"
    ]
   }
