--- a/viridian/algae/typhoon/typhoon.ipynb
+++ b/viridian/algae/typhoon/typhoon.ipynb
@@ -31,12 +31,13 @@
    "source": [
     "from os import environ\n",
     "\n",
-    "environ[\"TYPHOON_MIN_TIMEOUT\"] = str(1)\n",
-    "environ[\"TYPHOON_MAX_TIMEOUT\"] = str(4)\n",
-    "environ[\"TYPHOON_DEFAULT_TIMEOUT\"] = str(3)\n",
-    "environ[\"TYPHOON_MIN_NEXT_IN\"] = str(8.0)\n",
-    "environ[\"TYPHOON_MAX_NEXT_IN\"] = str(32.0)\n",
-    "environ[\"TYPHOON_MAX_RETRIES\"] = str(3)"
+    "environ[\"PROTOCOL_NAME\"] = \"typhoon\"\n",
+    "environ[\"PROTOCOL_MIN_TIMEOUT\"] = environ[\"TYPHOON_MIN_TIMEOUT\"] = str(1)\n",
+    "environ[\"PROTOCOL_MAX_TIMEOUT\"] = environ[\"TYPHOON_MAX_TIMEOUT\"] = str(4)\n",
+    "environ[\"PROTOCOL_DEFAULT_TIMEOUT\"] = environ[\"TYPHOON_DEFAULT_TIMEOUT\"] = str(3)\n",
+    "environ[\"PROTOCOL_MIN_NEXT_IN\"] = environ[\"TYPHOON_MIN_NEXT_IN\"] = str(8.0)\n",
+    "environ[\"PROTOCOL_MAX_NEXT_IN\"] = environ[\"TYPHOON_MAX_NEXT_IN\"] = str(32.0)\n",
+    "environ[\"PROTOCOL_MAX_RETRIES\"] = environ[\"TYPHOON_MAX_RETRIES\"] = str(3)"
    ]
   },
   {
@@ -263,8 +264,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(expand_time=False)) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
