--- a/viridian/algae/typhoon/port.ipynb
+++ b/viridian/algae/typhoon/port.ipynb
@@ -4,14 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PORT protocol showcase (for comparison)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some of the system packages required for this notebook, including: `ip-route`, `tc`"
+    "# PORT protocol showcase\n",
+    "\n",
+    "This notebook shows `PORT` protocol from the network perspective, for comparison with `TYPHOON`.\n",
+    "\n",
+    "Some of the system packages required for this notebook, including: `ip-route`, `tc`."
    ]
   },
   {
@@ -128,35 +125,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ideal connection"
+    "## What is `PORT`?\n",
+    "\n",
+    "`PORT` is a `TCP`-based protocol, that ensures connection stability using `TCP_KEEPALIVE`.\n",
+    "Whereas some of the `PORT` properties (data packet lengths and contents) are randomized, most of them (`TCP` packet contents and sending time) behave predictably.\n",
+    "\n",
+    "#### Graph description\n",
+    "\n",
+    "Packet length will be displayed in bar charts below as *bar heights*.\n",
+    "\n",
+    "Packet delivery offset is shown on horizontal axis as *offset from the connection termination*.\n",
+    "I.e. value of -300000ms means that packet was sent 5 minutes before the connection was closed.\n",
+    "\n",
+    "Packets that *are not part of `PORT` protocol* (e.g. `TCP` `SYN`, `ACK`, etc.) will be shown and described as **invalid**.\n",
+    "\n",
+    "### `PORT` guarantees\n",
+    "\n",
+    "Since `PORT` is TCP-based, **all** the lost or corrupted packets will be retransmitted, it ensures safe data delivery."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First and foremost, TYPHOON is designed to be **random**.\n",
-    "That includes:\n",
-    "\n",
-    "1. Randomly-looking packet contents.\n",
-    "2. Random packet lengths.\n",
-    "3. Random delays between packets.\n",
-    "\n",
-    "#### Packet contents\n",
-    "\n",
-    "Packet content randomness is achieved by encryption.\n",
-    "Packets are encrypted completely, TYPHOON uses distinct keys for host-port pairs (provided by UDP header).\n",
-    "That is the baseline, some other hiding techniques might be added later (if needed).\n",
-    "\n",
-    "#### Packet lengths\n",
-    "\n",
-    "Packet length randomness is achieved by attaching a random tail to every package.\n",
-    "Packet length will be displayed in bar charts below as *bar heights*.\n",
-    "\n",
-    "#### Packet delays\n",
-    "\n",
-    "Packet delays randomness is achieved by applying a random timeout between service packets.\n",
-    "NB! This timeout is not applied to data packets, so in examples below you will usually see them as pairs."
+    "## Ideal connection"
    ]
   },
   {
@@ -166,8 +158,8 @@
     "Simple sanity check here.\n",
     "Client connects to echo server, sends it a small package, receives response, checks it's the same and exits.\n",
     "\n",
-    "First two packets should be initialization packets, then we expect to observe a shadowride request packet (data + handshake) and a data response packet.\n",
-    "Last two packets should be termination packets.\n",
+    "Client and server exchange initialization packets, than data is transmitted.\n",
+    "Apart from that, multiple `TCP`-originated packets are being sent here and there.\n",
     "\n",
     "As a result, a small sequence diagram is produced, showing packet exchange, their direction, size and timestamp."
    ]
@@ -195,8 +187,8 @@
     "\n",
     "\n",
     "async with sniff(GraphConf()) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(success_listener_callback, echo_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(success_listener_callback, echo_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx() as c:\n",
     "            request = b\"Hi server!\"\n",
     "            await c.write(request)\n",
     "            response = await c.read()\n",
@@ -211,8 +203,8 @@
     "Client is connected to server, waits for some time and disappears.\n",
     "Server tries to restore connection, but fails and closes it after some time.\n",
     "\n",
-    "First two packets should be initialization packets, then several successful handshakes should happen.\n",
-    "Finally, some unsuccessful handshake attempts by server should be present - and finally a termination packet.\n",
+    "Client and server exchange initialization packets, then several successful `TCP` keepalive `ACK`s are being sent (small invalid packets, below 100 bytes in size).\n",
+    "Finally, some unsuccessful `ACK`s attempts by server should be present before the connection termination.\n",
     "\n",
     "As a result, a small packet plot is produced, showing packet exchange, their type, size and timestamp."
    ]
@@ -235,8 +227,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=lambda _: None, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=lambda _: None) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False) as c:\n",
     "            print(f\"Connection established! Sleeping for {SLEEP_DELAY}...\")\n",
     "            await sleep(SLEEP_DELAY)\n",
     "        print(f\"Connection interrupted! Waiting for {TIMEOUT_DELAY}...\")\n",
@@ -251,9 +243,8 @@
     "Client is connected to server, they exchange data packets every second.\n",
     "In the end, the connection is terminated successfully.\n",
     "\n",
-    "First two packets should be initialization packets, last two packets should be termination packets.\n",
-    "In between, multiple data and shadowride packages should be observable.\n",
-    "Because of the frequent data exchange, no pure handshake packets should be there.\n",
+    "In the beginning two packets should be initialization packets, in the end two packets should be termination packets.\n",
+    "In between, multiple data and `TCP` keepalive `ACK` packages should be observable.\n",
     "\n",
     "As a result, a small packet plot is produced, showing packet exchange, their type and size.\n",
     "The receiving time is omitted."
@@ -273,8 +264,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(expand_time=False)) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -282,14 +273,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Network in chaos"
+    "## Network in chaos\n",
+    "\n",
+    "This section shows how `PORT` protocol behaves under pressure of unfriendly network conditions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "normal"
+    "Here, network conditions are ideal."
    ]
   },
   {
@@ -306,8 +299,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -315,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "jitter"
+    "Here, random jitter between 25 and 175 ms is applied to packets."
    ]
   },
   {
@@ -334,8 +327,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 100ms 75ms\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 4)"
    ]
@@ -344,9 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "drop\n",
-    "\n",
-    "> WARNING! The following cell might fail in approximately 3% of the runs!"
+    "Here, 30% of packets will be dropped."
    ]
   },
   {
@@ -363,8 +354,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"loss 30%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -372,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "duplicate"
+    "Here, 30% of packets will be duplicated."
    ]
   },
   {
@@ -389,8 +380,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"duplicate 30%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -398,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "reorder"
+    "Here, some of the packets will be reordered within a 125ms timeframe."
    ]
   },
   {
@@ -417,8 +408,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 125ms reorder 30% 50%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 2.5)"
    ]
@@ -427,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "corrupt"
+    "Here, 30% of packets will be corrupted."
    ]
   },
   {
@@ -444,8 +435,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"corrupt 30%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   }
