--- a/viridian/algae/typhoon/typhoon.ipynb
+++ b/viridian/algae/typhoon/typhoon.ipynb
@@ -4,14 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TYPHOON protocol showcase"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some of the system packages required for this notebook, including: `ip-route`, `tc`"
+    "# TYPHOON protocol showcase\n",
+    "\n",
+    "This notebook shows `TYPHOON` protocol from the network perspective.\n",
+    "\n",
+    "Some of the system packages required for this notebook, including: `ip-route`, `tc`."
    ]
   },
   {
@@ -119,14 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ideal connection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First and foremost, TYPHOON is designed to be **random**.\n",
+    "## What is `TYPHOON`?\n",
+    "\n",
+    "First and foremost, `TYPHOON` is designed to be **random**.\n",
     "That includes:\n",
     "\n",
     "1. Randomly-looking packet contents.\n",
@@ -136,7 +128,7 @@
     "#### Packet contents\n",
     "\n",
     "Packet content randomness is achieved by encryption.\n",
-    "Packets are encrypted completely, TYPHOON uses distinct keys for host-port pairs (provided by UDP header).\n",
+    "Packets are encrypted completely, `TYPHOON` uses distinct keys for host-port pairs (provided by `UDP` header).\n",
     "That is the baseline, some other hiding techniques might be added later (if needed).\n",
     "\n",
     "#### Packet lengths\n",
@@ -147,7 +139,24 @@
     "#### Packet delays\n",
     "\n",
     "Packet delays randomness is achieved by applying a random timeout between service packets.\n",
-    "NB! This timeout is not applied to data packets, so in examples below you will usually see them as pairs."
+    "NB! This timeout is not applied to data packets, so in examples below you will usually see them as pairs.\n",
+    "Packet delivery offset is shown on horizontal axis as *offset from the connection termination*.\n",
+    "I.e. value of -300000ms means that packet was sent 5 minutes before the connection was closed.\n",
+    "\n",
+    "### `TYPHOON` guarantees\n",
+    "\n",
+    "Even though `TYPHOON` constantly monitors connection health, it does not guarantee any data delivery.\n",
+    "Meaning, any the data packets can be lost, delayed or corrupted and they **will not** be retransmitted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ideal connection\n",
+    "\n",
+    "This section describes ideal use cases of `TYPHOON` protocol, including connection establishing, exchanging data and termination.\n",
+    "For demonstration purposes, network conditions are considered to be ideal: there are no delays, no corruption and packets are never lost."
    ]
   },
   {
@@ -205,7 +214,9 @@
     "First two packets should be initialization packets, then several successful handshakes should happen.\n",
     "Finally, some unsuccessful handshake attempts by server should be present - and finally a termination packet.\n",
     "\n",
-    "As a result, a small packet plot is produced, showing packet exchange, their type, size and timestamp."
+    "As a result, a small packet plot is produced, showing packet exchange, their type, size and timestamp.\n",
+    "\n",
+    "> NB! As soon as user disappears, server will emit several `[Errno 111] Connection refused` error messages, which is fine and just means that no response was received."
    ]
   },
   {
@@ -273,14 +284,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Network in chaos"
+    "## Network in chaos\n",
+    "\n",
+    "This section shows how `TYPHOON` protocol behaves under pressure of unfriendly network conditions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "normal"
+    "Here, network conditions are ideal."
    ]
   },
   {
@@ -297,8 +310,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -306,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "jitter"
+    "Here, random jitter between 25 and 175 ms is applied to packets."
    ]
   },
   {
@@ -325,8 +338,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 100ms 75ms\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 4)"
    ]
@@ -335,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "drop\n",
+    "Here, 30% of packets will be dropped.\n",
     "\n",
     "> WARNING! The following cell might fail in approximately 3% of the runs!"
    ]
@@ -354,8 +367,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"loss 30%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -363,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "duplicate"
+    "Here, 30% of packets will be duplicated."
    ]
   },
   {
@@ -380,8 +393,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"duplicate 30%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -389,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "reorder"
+    "Here, some of the packets will be reordered within a 125ms timeframe."
    ]
   },
   {
@@ -408,8 +421,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 125ms reorder 30% 50%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 2.5)"
    ]
@@ -418,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "corrupt"
+    "Here, 30% of packets will be corrupted."
    ]
   },
   {
@@ -435,8 +448,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"corrupt 30%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback, log_level=10) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback, log_level=10) as c:\n",
+    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   }
